--- a/string formatting .ipynb
+++ b/string formatting .ipynb
@@ -50,6 +50,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Formatting Types"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -66,6 +73,140 @@
     "#use \"<\"  to left - align the value \n",
     "txt= \"we have {:<5} chickens \"\n",
     "print (txt.format(49))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have    25 Balls \n"
+     ]
+    }
+   ],
+   "source": [
+    "#right alignment\n",
+    "txt =  \"we have {:>5} Balls \"\n",
+    "print (txt.format(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have  25   Balls \n"
+     ]
+    }
+   ],
+   "source": [
+    "#center alignment  alignment\n",
+    "txt =  \"we have {:^5} Balls \"\n",
+    "print (txt.format(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the temperature is        5 degree celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "#use \"=\" to place the plus/ minus sign at the left most position \n",
+    "txt= \"the temperature is {:=8} degree celsius\"\n",
+    "print(txt.format(+5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the temperature is -      5 degree celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "#use \"=\" to place the plus/ minus sign at the left most position \n",
+    "txt= \"the temperature is {:=8} degree celsius\"\n",
+    "print(txt.format(-5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the temperature is between -5 and +7 degree celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"the temperature is between {:-} and {:+} degree celsius\"\n",
+    "print (txt.format (-5,7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the temperature is between -5 and 7 degree celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Use \" \" (a space) to insert a space before positive numbers and a minus sign before negative numbers:\n",
+    "txt = \"the temperature is between {:} and {:} degree celsius\"\n",
+    "print (txt.format (-5,7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The universe is 13_800_000_000 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Use \"_\" to add a underscore character as a thousand separator:\n",
+    "\n",
+    "txt = \"The universe is {:_} years old.\"\n",
+    "\n",
+    "print(txt.format(13800000000))\n"
    ]
   },
   {
